--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,4 +1,12 @@
-:root {
+*,
+::before,
+::after {
+  box-sizing: border-box;
+}
+
+/* 📌 Next.js example */
+
+/* :root {
   --max-width: 1100px;
   --border-radius: 12px;
   --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
@@ -104,4 +112,4 @@ a {
   html {
     color-scheme: dark;
   }
-}
+} */
