Add current page

--- a/src/components/Layout/Header/Header.module.scss
+++ b/src/components/Layout/Header/Header.module.scss
@@ -1,4 +1,17 @@
+.header {
+  display: flex;
+  justify-content: center;
+}
+
 .nav {
   display: flex;
   gap: 15px;
+
+  a {
+    &:hover,
+    &:focus,
+    &.current {
+      color: orangered;
+    }
+  }
 }
